# 2024.2-unimancer

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  makefile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-pipeline.yml
apresentacoes/1a-entrega/: index.html
docs/: index.md
docs/apresentacoes/: 1a-entrega.md
docs/modelagem/: dd.md  der.md  mer.md  mr.md
docs/sql/: ddl.md  dml.md  dql.md  procedures.md  triggers.md
modelagem/dd/: index.html
modelagem/der/: index.html
modelagem/mer/: index.html
modelagem/mr/: index.html
search/: search_index.json
site/: 404.html  index.html
site/modelagem/dd/: index.html
site/search/: search_index.json
source/: combat.py  create_character.py  database.py  default.py  default_values.py  init.sql  interface.py  logic.py  main.py  procedure.sql  triggers.sql  utils.py
source/database/: Database.py
source/defaults/: enemies.py  enemies_instances.py  hats.py  regions.py  rings.py  sub_regions.py  sub_regions_connections.py  template.py
source/interface/: display.py  inventory.py  world_info.py
source/queries/: query.py  query.sql
sql/ddl/: index.html
sql/dml/: index.html
sql/dql/: index.html
sql/procedures/: index.html
sql/triggers/: index.html
src/: __init__.py  combat.py  default.py  logic.py  utils.py
src/database/: Database.py  user_game.sql  users.sql
src/interface/: display.py  inventory.py  merchant_interface.py  world_info.py
src/logic/: character.py  combat.old.py  combat.py  enemy.py  main.py  quest.py
stylesheets/: logo.css
(+86 files in other folders)
